@@ -2,5 +2,5 @@ from django.utils.translation import ugettext_lazy as _
 from common.api import register_menu
 
 register_menu([
-    {'text':_(u'search'), 'view':'search', 'famfam':'zoom', 'position':6},
+    {'text':_(u'search'), 'view':'search', 'famfam':'zoom', 'position':5},
 ])
