@@ -21,3 +21,5 @@
 * Added WSGI and apache sample deployment files as well as instructions
 * Added Purchase request and purchase orders
 * New wizard to generate purchase orders from purchase requests
+* Added view to transfer received items from a PO to an inventory
+* Reorganized secondary menu, removed reduntant entries
